# rust-backend-actix-web

./: info.txt
backend/: Cargo.toml
backend/node/: other.js  package-lock.json  package.json  server.js
backend/src/: lib.rs  main.rs
backend/src/controllers/: package.rs  user.rs
backend/src/middleware/: authentication.rs
backend/src/models/: package.rs  user.rs
backend/src/routes/: package.rs  user.rs
backend/src/services/: db.rs
backend/src/utils/: helpers.rs
