[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = {version = "1.0.154", features = ["derive"]}
mongodb = "2.4.0"
futures = "0.3"
reqwest = {version = "0.11.14", features = ["blocking"]}
scraper = {version = "0.15.0"}

[dev-dependencies]
cargo-watch = "8.4.0"

[scripts]
watch = "watchexec --exts rs,toml -- cargo run"