[package]
name = "fordev"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
serde = {version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
mongodb = "2.4.0"
futures = "0.3.26"
futures-util = "0.3.26"
rust-argon2 = "1.0.0"
jsonwebtoken="8.2.0"
env_logger = "0.10.0"
chrono="0.4.23"
reqwest = {version = "0.11.14", features = ["blocking"]}
scraper = {version = "0.15.0"}

[dev-dependencies]
cargo-watch = "8.4.0"

[scripts]
watch = "watchexec --exts rs,toml -- cargo run"
